fix message limit, chat statistic, delete message